[package]
name = "bevy-tokio-tasks"
# Major and minor version here should match bevy's. Patch version can vary.
version = "0.9.4"
edition = "2021"
license = "CC0-1.0"
description = "Simple integration of a Tokio runtime into a Bevy app for background processing."
homepage = "https://crates.io/crates/bevy-tokio-tasks"
repository = "https://github.com/EkardNT/bevy-tokio-tasks"
keywords = ["gamedev", "bevy", "tokio", "async", "plugin"]
categories = ["game-development", "asynchronous"]

[dependencies]
bevy_app = "0.9.1"
bevy_ecs = "0.9.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[dev-dependencies]
bevy = { version = "0.9.1", default-features = false, features = ["bevy_core_pipeline", "bevy_asset", "bevy_render", "bevy_winit", "x11"] }
tokio = { version = "1", features = ["time"] }
